crates/control/tests/it/snapshots/it__connector_images__connector_images_index_test.snap
---
source: crates/control/tests/it/connector_images.rs
assertion_line: 51
expression: "response.json::<JsonValue>().await.unwrap()"

---
{
  "data": [
    {
      "connector_id": "[id]",
      "created_at": "[datetime]",
      "id": "[id]",
      "image": "ghcr.io/estuary/source-hello-world",
      "sha256": "15751ba960870e5ba233ebfe9663fe8a236c8ce213b43fbf4cccc4e485594600",
      "tag": "01fb856",
      "updated_at": "[datetime]"
    }
  ]
}
