crates/control/tests/it/snapshots/it__connector_images__connectors_show_test.snap
---
source: crates/control/tests/it/connector_images.rs
assertion_line: 158
expression: redactor.response_json(response).await.unwrap()

---
{
  "data": {
    "attributes": {
      "connector_id": "[c1]",
      "created_at": "[datetime]",
      "digest": "15751ba960870e5ba233ebfe9663fe8a236c8ce213b43fbf4cccc4e485594600",
      "id": "[i1]",
      "name": "ghcr.io/estuary/source-hello-world",
      "tag": "01fb856",
      "updated_at": "[datetime]"
    },
    "id": "[i1]",
    "links": {
      "connector": "http://127.0.0.1:0/connectors/[c1]",
      "self": "http://127.0.0.1:0/connector_images/[i1]",
      "spec": "http://127.0.0.1:0/connector_images/[i1]/spec"
    },
    "type": "connector_image"
  }
}
