crates/control/tests/it/snapshots/it__connector_images__source_discovered_catalog_test.snap
---
source: crates/control/tests/it/connector_images.rs
assertion_line: 127
expression: redactor.response_json(&mut response).await.unwrap()
---
{
  "data": {
    "attributes": {
      "import": [
        {
          "contentType": "application/vnd.flow.catalog+json",
          "url": "flow://catalog/hello-world.flow.json"
        }
      ],
      "resources": {
        "flow://catalog/greetings.schema.json": {
          "content": {
            "properties": {
              "count": {
                "type": "integer"
              },
              "message": {
                "type": "string"
              }
            },
            "required": [
              "count",
              "message"
            ],
            "type": "object"
          },
          "contentType": "application/vnd.flow.jsonSchema+json"
        },
        "flow://catalog/hello-world.config.json": {
          "content": {
            "greetings": 10
          },
          "contentType": "application/vnd.flow.config+json"
        },
        "flow://catalog/hello-world.flow.json": {
          "content": {
            "captures": {
              "acmeCo/hello-world": {
                "bindings": [
                  {
                    "resource": {
                      "stream": "greetings",
                      "syncMode": "incremental"
                    },
                    "target": "acmeCo/greetings"
                  }
                ],
                "endpoint": {
                  "connector": {
                    "config": "hello-world.config.json",
                    "image": "ghcr.io/estuary/source-hello-world@sha256:15751ba960870e5ba233ebfe9663fe8a236c8ce213b43fbf4cccc4e485594600"
                  }
                }
              }
            },
            "collections": {
              "acmeCo/greetings": {
                "key": [
                  "/count"
                ],
                "schema": "greetings.schema.json"
              }
            }
          },
          "contentType": "application/vnd.flow.catalog+json"
        }
      },
      "storageMappings": {
        "": {
          "stores": [
            {
              "bucket": "example",
              "prefix": null,
              "provider": "GCS"
            }
          ]
        }
      }
    },
    "id": "[nonce]",
    "type": "discovered_catalog"
  },
  "links": {
    "image": "http://127.0.0.1:0/connector_images/[i1]",
    "self": "http://127.0.0.1:0/connector_images/[i1]/discovered_catalog"
  }
}
